--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_fr.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_fr.properties
@@ -26,90 +26,91 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 ##
 
-phone.starting = Starting Phone...
-phone.failed = Failed to start phone
-phone.tryagain = Try again
-phone.call = Call
-phone.voicemail = Voice Mail
-phone.viewcallhistory = View Call History
-phone.placecall = Place phone call.
-phone.hangup = End Call
-phone.tips.hangup = Hang up phone conversation
-phone.home = Home
-phone.work = Work
-phone.cell = Cell
-phone.currentcall = Current Call
-phone.incomingcall = Incoming Call
-phone.noprevious = No previous conversations.
-phone.callended = Call Ended
-phone.transferto = Call transferred to
-phone.connected = Connected
-phone.lastcalled = Last called
-phone.never = Never
-phone.duration = Duration
-phone.accept = Accept
-phone.reject = Reject
-phone.callback = Call Back
-phone.delete = Delete
-phone.enternumber = Enter a number to call.
-phone.invalidnumber = Invalid Number
-phone.outgoingcall = Outgoing call to
-phone.callhistory = Call History
-phone.dialed = Dialed
-phone.dialedcalls = Dialed Calls
-phone.received = Received
-phone.receivedcalls = Received Calls
-phone.missed = Missed
-phone.missedcalls = Missed Calls
-phone.unknown = Unknown
-phone.placecallto = Placed call to
-phone.receivedcallfrom = Received Call from
-phone.missedcallfrom = Missed call from
-phone.incomingcallfrom = Incoming call from
-phone.contactdetails = Contact Details
-phone.noinfo = No Information Available
-phone.viewfullprofile = View Full Profile
-phone.tips.mute = Mute this call
-phone.mute = Mute
-phone.unmute = Unmute
-phone.tips.hold = Place this call on Hold
-phone.hold = Hold
-phone.onhold = On Hold
-phone.time = Time
-phone.tips.transfer = Transfer this call
-phone.transfer = Transfer
-phone.transferring = Transferring
-phone.transfered = Transfered
-phone.callstartedat = Call Started at
-phone.callendedat = Call Ended at
-phone.onphonewith = On the phone with
-phone.callendedwith = Call ended with
-phone.previousconversations = Previous Conversations
-phone.closeconfirm = Closing this room will end the call. Continue?
+phone.starting = Démarrage du Téléphone...
+phone.failed = Impossible de démarrer le Téléphone
+phone.tryagain = Essayer à nouveau
+phone.call = Appel
+phone.voicemail = Messagerie Vocale
+phone.viewcallhistory = Afficher l'historique des appels
+phone.placecall = Passer un appel téléphonique.
+phone.hangup = Fin d'appel
+phone.tips.hangup = Raccrocher la conversation téléphonique
+phone.home = Domicile
+phone.work = Travail
+phone.cell = Mobile
+phone.currentcall = Appel en cours
+phone.incomingcall = Appel entrant
+phone.noprevious = Aucune conversation précédente.
+phone.callended = Appel terminé
+phone.transferto = Appel transféré à
+phone.connected = Connecté
+phone.lastcalled = Dernier appel
+phone.never = Jamais
+phone.duration = Durée
+phone.accept = Accepter
+phone.reject = Rejeter
+phone.callback = Rappeler
+phone.delete = Supprimer
+phone.enternumber = Entrez un numéro à appeler.
+phone.invalidnumber = Numéro invalide
+phone.outgoingcall = Appel sortant vers
+phone.callhistory = Historique des appels
+phone.dialed = Composé
+phone.dialedcalls = Appels composés
+phone.received = Reçu
+phone.receivedcalls = Appels reçus
+phone.missed = Manqué
+phone.missedcalls = Appels manqués
+phone.unknown = Inconnu
+phone.placecallto = Appel passé à
+phone.receivedcallfrom = Appel reçu de
+phone.missedcallfrom = Appel manqué de
+phone.incomingcallfrom = Appel entrant de
+phone.contactdetails = Détails du contact
+phone.noinfo = Pas d'information disponible
+phone.viewfullprofile = Voir le Profil complet
+phone.tips.mute = Couper cet appel
+phone.mute = Muet
+phone.unmute = Rétablir le son
+phone.tips.hold = Mettre cet appel en attente
+phone.hold = Attente
+phone.onhold = En attente
+phone.time = Temps
+phone.tips.transfer = Transférer cet appel
+phone.transfer = Transfert
+phone.transferring = Transfert
+phone.transfered = Transféré
+phone.callstartedat = Appel commencé à
+phone.callendedat = Appel terminé à
+phone.onphonewith = Au téléphone avec
+phone.callendedwith = Appel terminé avec
+phone.previousconversations = Conversations précédentes
+phone.closeconfirm = La fermeture de cette salle mettra fin à l'appel. Continuer?
 phone.confirmation = Confirmation
-phone.all = All
-phone.allcalls = All Calls
-phone.tocall = Call
-btn.add  	= Add
-btn.edit 	= Edit
-btn.del  	= Delete
-btn.dial	= Call
-book.name 	= Name
-book.number = Number
-frame.title	= Phonebook
-book.search = Search
+phone.all = Tout
+phone.allcalls = Tous les appels
+phone.tocall = Appel
+phone.enabled = Téléphone Activé
+btn.add  	= Ajouter
+btn.edit 	= Editer
+btn.del  	= Supprimer
+btn.dial	= Appel
+book.name 	= Nom
+book.number = Numéro
+frame.title	= Annuaire
+book.search = Recherche
 btn.ok      = OK
-btn.cancel  = Cancel
-frame.add 	= "Add Entry"
-frame.edit 	= "Edit Entry"
-book.exists		= "The phonebook-entry you wish to add is already existing."
-book.noEntry	= "No Entry Selected!"
-book.fillFields = "Please fill all Fields"
+btn.cancel  = Annuler
+frame.add 	= "Ajouter une entrée"
+frame.edit 	= "Modifier l'entrée"
+book.exists		= "L'entrée de répertoire que vous souhaitez ajouter existe déjà."
+book.noEntry	= "Aucune entrée sélectionnée!"
+book.fillFields = "Merci de compléter tous les champs"
 book.warning	= "Attention"
 title.sip.codecs.title = Codecs
-codecs.select 	= < Select
-codecs.unselect = Unselect >
-codecs.up		= Up ^
-codecs.down		= Down v
-codecs.audio.selected	= Selected Audio Codecs
-codecs.audio.avail		= Available Audio Codecs
+codecs.select 	= < Sélectionner
+codecs.unselect = Désélectionner >
+codecs.up		= Haut ^
+codecs.down		= Bas v
+codecs.audio.selected	= Codecs Audio Sélectionnés
+codecs.audio.avail		= Codecs Audio Disponibles
