--- a/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_fr.properties
+++ b/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_fr.properties
@@ -4,6 +4,6 @@ preference.spellcheckingEnabled = Activer le &correcteur
 preference.autoSpellcheckingEnabled = Activer la correction &automatique
 preference.language = &Langue
 preference.ignore.uppercasedword = &Ignorer les majuscules
-preference.show.langauage.in.chat.windows = Autoriser la sélection de langue dans la fenêtre de chat
+preference.show.langauage.in.chat.windows = Autoriser la sélection de langue dans la fenêtre de conversation
 dialog.no.mistakes = Aucune faute d'ortographe
 button.check.spelling = Vérifier l'orthographe
