--- a/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_fr.properties
+++ b/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_fr.properties
@@ -41,10 +41,10 @@
 ##      Added key: 'guard.settings.title.settings'
 ##
 
-guard.settings.title.list = protection de transfert
+guard.settings.title.list = Transfer Guard
 guard.settings.title.settings = Paramètres de transfert de fichiers
 guard.settings.tooltips.blockedtypes = Saisissez les extensions de fichier que vous souhaitez bloquer (par ex. '*.doc'), séparées par des virgules
-guard.settings.tooltips.blockedperson = Entrez le JID des utilisateurs dont vous souhaitez bloquer les transferts de fichiers (par exemple, 'loser@domain.com'), séparés par des virgules
+guard.settings.tooltips.blockedperson = Entrez le JID des utilisateurs dont vous souhaitez bloquer les transferts de fichiers (par exemple, 'utilisateur@domain.com'), séparés par des virgules
 guard.settings.tooltips.textarea = Entrez un message que vous souhaitez envoyer à ceux dont les fichiers sont bloqués par vos paramètres. Laissez cet espace vide si vous ne souhaitez pas leur envoyer de message.
 guard.settings.title.extensions = Extensions de fichiers bloquées
 guard.settings.title.person = Expéditeurs bloqués
