--- a/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_fr.properties
+++ b/plugins/tictactoe/src/main/resources/i18n/tictactoe_i18n_fr.properties
@@ -4,7 +4,7 @@
 ###########################
 
 ttt.game.request = {0} demande un jeu de
-ttt.game.name = Tic Tac Toe of Doom
+ttt.game.name = Tic Tac Toe de Doom
 ttt.window.title = {0} contre {1}
 ttt.win = Félicitations, vous avez gagné!
 ttt.lose = Désolé, vous avez perdu!
