spark-core: separate message when account registration is not allowed

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -480,6 +480,7 @@ message.add.to.roster = Add To roster
 message.add.user = Add user to your roster?
 message.alert.notify = Alert notification
 message.already.exists = Account already exists, please try a different username
+message.create.account.not.allowed = Account creation is not allowed on the server
 message.approve.subscription = Allow {0} to add you to their roster?
 message.authenticating = Authenticating
 message.away.idle = Away due to idle
