SPARK-2343 Show error "Contact search service is not available" if no any search service provided
Signed-off-by: Sergey Ponomarev <stokito@gmail.com>

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -653,7 +653,7 @@ message.save.profile = To save changes to your profile, click save
 message.search.for.contacts = Search for contacts
 message.search.input.short = Please provide at least two letters.
 message.search.for.other.people = Search for other people on the server
-message.search.service.not.available = Unable to contact search service
+message.search.service.not.available = Contact search service is not available
 message.searching.please.wait = Searching, please wait...
 message.select.add.room.to.add = Please select a room to add to your service list
 message.select.one.or.more = Select one or more users in your roster
