First attempt at implementing xep-0483. Supports jitsi, galene and ohun

--- a/plugins/meet/src/main/resources/i18n/sparkmeet_i18n.properties
+++ b/plugins/meet/src/main/resources/i18n/sparkmeet_i18n.properties
@@ -1,6 +1,6 @@
-name= Pade Meetings
+name= Online Meetings
 
-preference.sparkmeetEnabled = Enable Pade meeting
-preference.url = Jitsi Meet URL
-preference.title = Pade Meetings Settings
+preference.sparkmeetEnabled = Enable Online Meetings
+preference.url = Online Meetings Base URL
+preference.title = Online Meetings Settings
 
